--- a/data/blog/spring-boot.mdx
+++ b/data/blog/spring-boot.mdx
@@ -1,11 +1,12 @@
 ---
 title: spring application 초기화 과정 살펴보기
 date: '2024-06-18'
+lastmod: '2024-06-18'
 tags: ['java', 'spring']
 draft: false
-layout: PostBanner
-images: ['/static/images/spring.svg']
+layout: PostSimple
 summary: spring application 에서 applicationContext, BeanFactory 등 스프링 컴포넌트들이 초기화 되는 과정을 살펴보자.
+images: ['/static/images/spring.svg']
 ---
 ## 들어가며
 
