WOR-93: 全体設定を自分のサイト用に調整

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,16 @@
 ---
-name: Tails Azimuth
-avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+name: あやき
+avatar: /static/images/avatar.jpg
+occupation: バックエンドエンジニア
+company: フリーランス
+twitter: https://twitter.com/ayaki2325
+github: https://github.com/ayaki2325
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+フリーランス←バックエンドエンジニア←MARCH文系。
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+シニアバックエンドエンジニアになりたい。  
+同じ目標を持つ人向けの情報を発信中。
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+PMと直接あれこれ話し合うチームリーダー的なポジションにいることが多い。  
+PHP, Laravel, MySQL, Docker, AWSが主な技術スタック。
