--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,12 @@
 ---
-name: Tails Azimuth
-avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
+name: Ryan Batch
+avatar: /static/images/avatar.jpg
+occupation: Multidisciplinary designer
+company: Parallel Arts
+email: ryan@parallelarts.com
 twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+linkedin: https://www.linkedin.com/in/ryanbatch/
+github: https://github.com/batcholove
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
-
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+I’m a multidisciplinary designer who brings depth, clarity, and calm to complex challenges. With a thoughtful and empathetic approach, I create experiences that are not only intuitive but also meaningful, grounded in strategy, and focused on real human needs. My background blends systems thinking, emotional intelligence, and analytical rigor. Whether I’m leading a user research session, mapping a service ecosystem, or shaping a design system, I work deliberately and with intention. People often describe me as a quiet force: someone who listens deeply, sees beneath the surface, and makes the invisible visible. I believe great design is honest, enduring, and transformative.
