--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -9,4 +9,8 @@ linkedin: https://www.linkedin.com/in/ryanbatch/
 github: https://github.com/batcholove
 ---
 
-I’m a multidisciplinary designer who brings depth, clarity, and calm to complex challenges. With a thoughtful and empathetic approach, I create experiences that are not only intuitive but also meaningful, grounded in strategy, and focused on real human needs. My background blends systems thinking, emotional intelligence, and analytical rigor. Whether I’m leading a user research session, mapping a service ecosystem, or shaping a design system, I work deliberately and with intention. People often describe me as a quiet force: someone who listens deeply, sees beneath the surface, and makes the invisible visible. I believe great design is honest, enduring, and transformative.
+I’m a multidisciplinary designer who brings depth, clarity, and calm to complex challenges. With a thoughtful and empathetic approach, I create experiences that are not only intuitive but also meaningful, grounded in strategy, and focused on real human needs.
+
+My background blends systems thinking, emotional intelligence, and analytical rigor. Whether I’m leading a user research session, mapping a service ecosystem, or shaping a design system, I work deliberately and with intention. People often describe me as a quiet force: someone who listens deeply, sees beneath the surface, and makes the invisible visible.
+
+I believe great design is honest, enduring, and transformative.
